--- a/Algoritmos_PAA.ipynb
+++ b/Algoritmos_PAA.ipynb
@@ -16,7 +16,19 @@
       },
       "source": [
         "## **Programação Dinâmica: Multiplicação em Cadeia de Matrizes**\n",
-        " \n",
+        "\n",
+        "**Conceito**: A programação dinâmica é um método de desenvolvimento que busca\n",
+        "encontrar a solução de vários subproblemas para, daí então, encontrar a\n",
+        "solução do problema geral.\n",
+        "  * A grande novidade dessa metodologia é que os subresultados são\n",
+        "armazenados em memória pois eles são utilizados em diversos momentos\n",
+        "dentro do cômputo da solução. \n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "**Problema**: Multiplicação de cadeias de matrizes\n",
         "\n",
         "* A multiplicação de cadeias de matrizes (ou Matrix Chain Ordering Problem, MCOP) é um problema de otimização que busca a maneira mais eficiente de multiplicar uma dada sequência de matrizes. O problema não é realmente realizar as multiplicações, mas apenas decidir a sequência das multiplicações de matrizes envolvidas.\n",
         "* A multiplicação de matrizes é associativa, pois não importa como o produto esteja entre parênteses, o resultado obtido permanecerá o mesmo. \n",
@@ -43,8 +55,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "The minimum cost is 4500\n"
           ]
@@ -122,6 +134,14 @@
       },
       "source": [
         "# **Divisão e conquista: Cálculo de potência (x, n)**\n",
+        "**Conceito**: a instância dada do problema é dividida em duas ou mais instâncias menores, cada instância menor é resolvida usando o próprio algoritmo que está sendo definido, as soluções das instâncias menores são combinadas para produzir uma solução da instância original.\n",
+        "* A segunda fase é implementada por uma chamada recursiva. Essa é a fase da conquista.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
         "* O problema pode ser definido recursivamente por:\n",
         "* potência(x, n) = potência(x, n / 2) * potência(x, n / 2); // se n for par\n",
         "* potência(x, n) = x * potência(x, n / 2) * potência(x, n / 2); // se n é ímpar\n",
@@ -130,18 +150,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5OENBJDUYWML",
-        "outputId": "4a2c2413-45e2-4fc8-fca5-37051b843988"
+        "outputId": "408cc5c6-1d27-4c26-e9de-03a23a9a7890"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "30517578125\n"
           ]
@@ -183,6 +203,11 @@
       },
       "source": [
         "# **Algoritmo Guloso: Frações Egípcias**\n",
+        "**Conceito**: Um algoritmo guloso é uma estratégia algorítmica que faz a melhor escolha ótima em cada pequeno estágio com o objetivo de eventualmente levar a uma solução ótima global. Isso significa que o algoritmo escolhe a melhor solução no momento sem levar em consideração as consequências. Ele escolhe a melhor saída imediata, mas não considera o quadro geral, portanto, é considerado ganancioso.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "* Cada fração positiva pode ser representada como soma de frações unitárias únicas.\n",
         "* Uma fração é fração unitária se o numerador for 1 e o denominador for um número inteiro positivo.\n",
         "* Para um determinado número da forma 'nr/dr' onde dr > nr, primeiro encontre a maior fração unitária possível, então repita para a parte restante.\n",
@@ -203,8 +228,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "The Egyptian Fraction Representation of 6/14 is\n",
             " 1/3 +  1/11 +  1/231 "
@@ -271,6 +296,11 @@
       },
       "source": [
         "# **Recursividade: Máximo Divisor Comum**\n",
+        "**Conceito**: um algoritmo que chama a si mesmo com valores de entrada \"menores (ou mais simples)\" e que obtém o resultado para a entrada atual aplicando operações simples ao valor retornado para a entrada menor (ou mais simples). \n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "* O algoritmo euclidiano é uma maneira de encontrar o máximo divisor comum de dois números inteiros positivos.\n",
         "* MDC de dois números é o maior número que os divide.\n",
         "* Uma maneira simples de encontrar o GCD é fatorar os dois números e multiplicar os fatores primos comuns.\n",
@@ -283,16 +313,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "MMXct-Ckj9Rw",
+        "outputId": "432a9069-e60d-4f16-dac4-ecda063fd27f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "MMXct-Ckj9Rw",
-        "outputId": "432a9069-e60d-4f16-dac4-ecda063fd27f"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "gcd( 10 , 15 ) =  5\n",
             "gcd( 35 , 10 ) =  5\n",
@@ -335,6 +365,13 @@
       },
       "source": [
         "# **Backtracking: m Problema de Coloração (Grafos)**\n",
+        "**Conceito**: Um algoritmo de retrocesso é um algoritmo de solução de problemas que usa uma abordagem de força bruta para encontrar a saída desejada.\n",
+        "\n",
+        "* A abordagem de força bruta experimenta todas as soluções possíveis e escolhe as soluções desejadas/melhores.\n",
+        "* O termo backtracking sugere que, se a solução atual não for adequada, volte atrás e tente outras soluções. Assim, a recursão é usada nesta abordagem.\n",
+        "\n",
+        "---\n",
+        "\n",
         "* Dado um grafo o problema visa resolver quais vertices podem ser coloridos com cores diferentes\n",
         "* Complexidade de tempo: O(mV). Existe um total de O(mV) combinações de cores Exponencial."
       ]
@@ -343,16 +380,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "mgCTOiiLj9Rx",
+        "outputId": "81e7ca0c-08ed-4b21-8658-d6645fe919c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "mgCTOiiLj9Rx",
-        "outputId": "81e7ca0c-08ed-4b21-8658-d6645fe919c0"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Solution exist and Following are the assigned colours:\n",
             "1 2 3 2 "
@@ -437,7 +474,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.2 (default, Feb 28 2021, 17:03:44) \n[GCC 10.2.1 20210110]"
+      "version": "3.8.10"
     },
     "vscode": {
       "interpreter": {
