equação de recorrência recursividade

--- a/Algoritmos_PAA.ipynb
+++ b/Algoritmos_PAA.ipynb
@@ -55,8 +55,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The minimum cost is 4500\n"
           ]
@@ -160,8 +160,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "30517578125\n"
           ]
@@ -228,8 +228,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The Egyptian Fraction Representation of 6/14 is\n",
             " 1/3 +  1/11 +  1/231 "
@@ -313,16 +313,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "MMXct-Ckj9Rw",
-        "outputId": "432a9069-e60d-4f16-dac4-ecda063fd27f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MMXct-Ckj9Rw",
+        "outputId": "432a9069-e60d-4f16-dac4-ecda063fd27f"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "gcd( 10 , 15 ) =  5\n",
             "gcd( 35 , 10 ) =  5\n",
@@ -333,6 +333,7 @@
       "source": [
         "# Python3 program to demonstrate Basic Euclidean Algorithm\n",
         "\n",
+        "# T(n) = T(2log2^n) + 1\n",
         "\n",
         "# Function to return gcd of a and b\n",
         "def gcd(a, b):\n",
@@ -378,18 +379,127 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "E possivel colorir!\n",
+            "As cores atribuídas são as seguintes:\n",
+            "Vertice:  0  Cor:  1\n",
+            "Vertice:  1  Cor:  2\n",
+            "Vertice:  2  Cor:  3\n",
+            "Vertice:  3  Cor:  2\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Graph():\n",
+        "    \"\"\"Classe onde implementa a coloracaoo de vertices de um grafo utilizando backtracking, \n",
+        "    onde cada vizinho de um grafo deve ser colorido com cores distintas. \n",
+        "\n",
+        "    Complexidade: O(m^V)\n",
+        "    \"\"\"\n",
+        "  \n",
+        "    def __init__(self, vertices):\n",
+        "        self.V = vertices\n",
+        "        # se nao passar um grafo, ele gera uma matriz preenchida com zeros\n",
+        "        self.graph = [[0 for column in range(vertices)]\n",
+        "                      for row in range(vertices)]\n",
+        "  \n",
+        "    def isSafe(self, v, colour, c):\n",
+        "        \"\"\"Função que irá verificar se o colorArray atual do gráfico é seguro ou não.\n",
+        "\n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        v: vertice atual para ser analisado se pode colorir\n",
+        "        colour: array de cores\n",
+        "        c: vertice alvo para verificar se a cor vai ser igual\n",
+        "        \"\"\"\n",
+        "        for i in range(self.V):\n",
+        "            # verifica se os vizinhos do vertice v possui a mesma cor que os vértices vizinhos\n",
+        "            # caso nao possua, significa que a cor i pode ser atribuida ao vertice v\n",
+        "            if self.graph[v][i] == 1 and colour[i] == c:\n",
+        "                return False\n",
+        "        return True\n",
+        "  \n",
+        "    def graphColourUtil(self, m, colour, v):\n",
+        "        \"\"\"Uma função recursiva que usa o índice atual, o número de vértices \n",
+        "        e a matriz de cores. Se a chamada recursiva retornar true, a coloração \n",
+        "        será possível. Ele retorna false se as m cores não puderem ser atribuídas.\n",
+        "\n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        m: numero de cores (numero inteiro)\n",
+        "        colour: array de cores\n",
+        "        v: vertice atual para ser analisado\n",
+        "        \"\"\"\n",
+        "        # caso base\n",
+        "        if v == self.V:\n",
+        "            return True\n",
+        "  \n",
+        "        for c in range(1, m + 1):\n",
+        "            # verifica se é possivel colorir o vertice atual com a cor c\n",
+        "            if self.isSafe(v, colour, c) == True:\n",
+        "                # se foi possivel, atribui a cor ao vertice analisado\n",
+        "                colour[v] = c\n",
+        "                # analisa recursivamente os proximos vertices para tentar colorir \n",
+        "                if self.graphColourUtil(m, colour, v + 1) == True:\n",
+        "                    return True\n",
+        "\n",
+        "                # backtrack\n",
+        "                colour[v] = 0\n",
+        "  \n",
+        "    def graphColouring(self, m):\n",
+        "        \"\"\"Funcao que ira realizar a coloracao do grafo utilizando os métodos\n",
+        "        apresentados acima.\n",
+        "\n",
+        "        Complexidade: O(m^V)\n",
+        "        \"\"\"\n",
+        "        # Inicialmente, a matriz de cores é inicializada com 0.\n",
+        "        colour = [0] * self.V\n",
+        "\n",
+        "        # Chama graphColoringAlgorithmUtil() para o vértice 0.\n",
+        "        # iniciando a coloracao do grafo a partir da primeira posicao\n",
+        "        # ira rodar a funcao recursivamente até que seja possivel colorir o grafo ou não\n",
+        "        if self.graphColourUtil(m, colour, 0) == None:\n",
+        "            print(\"Nao é possivel colorir!\")\n",
+        "            return False\n",
+        "\n",
+        "        print(\"E possivel colorir!\")\n",
+        "        print(\"As cores atribuídas são as seguintes:\")\n",
+        "        for c in range(self.V):\n",
+        "            print(\"Vertice: \", c, \" Cor: \", colour[c])\n",
+        "        return True\n",
+        "  \n",
+        "  \n",
+        "if __name__ == '__main__':\n",
+        "    g = Graph(4)\n",
+        "    g.graph = [[0, 1, 1, 1],\n",
+        "               [1, 0, 1, 0], \n",
+        "               [1, 1, 0, 1], \n",
+        "               [1, 0, 1, 0]]\n",
+        "    m = 3\n",
+        "  \n",
+        "    g.graphColouring(m)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mgCTOiiLj9Rx",
-        "outputId": "81e7ca0c-08ed-4b21-8658-d6645fe919c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mgCTOiiLj9Rx",
+        "outputId": "81e7ca0c-08ed-4b21-8658-d6645fe919c0"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Solution exist and Following are the assigned colours:\n",
             "1 2 3 2 "
