--- a/Algoritmos_PAA.ipynb
+++ b/Algoritmos_PAA.ipynb
@@ -197,6 +197,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "JSOI1Zv8c56x"
@@ -206,19 +207,22 @@
         "**Conceito**: Um algoritmo guloso é uma estratégia algorítmica que faz a melhor escolha ótima em cada pequeno estágio com o objetivo de eventualmente levar a uma solução ótima global. Isso significa que o algoritmo escolhe a melhor solução no momento sem levar em consideração as consequências. Ele escolhe a melhor saída imediata, mas não considera o quadro geral, portanto, é considerado ganancioso.\n",
         "\n",
         "---\n",
-        "\n",
-        "\n",
         "* Cada fração positiva pode ser representada como soma de frações unitárias únicas.\n",
         "* Uma fração é fração unitária se o numerador for 1 e o denominador for um número inteiro positivo.\n",
         "* Para um determinado número da forma 'nr/dr' onde dr > nr, primeiro encontre a maior fração unitária possível, então repita para a parte restante.\n",
-        "* R: 1 + n + 1 + 1 + 1 + 1 + n + 1\n",
-        "* R: 6 + 2n \n",
+        "* Por exemplo, considere 6/14, primeiro encontramos o teto de 14/6, ou seja, 3. Portanto, a primeira fração unitária torna-se 1/3 e, em seguida, repete-se para (6/14 – 1/3), ou seja, 4/42.\n",
+        "\n",
+        "* Exemplo: \n",
+        "    - Representação de Frações Egípcias de 2/3 é 1/2 + 1/6;\n",
+        "    - Representação de Frações Egípcias de 6/14 é 1/3 + 1/11 + 1/231\n",
+        "    - Representação de Frações Egípcias de 12/13 é 1/2 + 1/3 + 1/12 + 1/156\n",
+        "\n",
         "* Complexidade: O(n) "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -231,62 +235,64 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The Egyptian Fraction Representation of 6/14 is\n",
-            " 1/3 +  1/11 +  1/231 "
+            "A fracao egipcia de 6/14 é \n",
+            " 1/3 +  1/11 +  1/231\n"
           ]
         }
       ],
       "source": [
-        "# Python3 program to print a fraction\n",
-        "# in Egyptian Form using Greedy\n",
+        "\n",
+        "# Python3 programa que mostra uma fração\n",
+        "# na forma egipcia usando algoritmo guloso\n",
         "# Algorithm\n",
-        "\n",
-        "# import math package to use\n",
-        "# ceiling function\n",
+        " \n",
         "import math\n",
+        " \n",
+        "def fracaoEgipcia(nr, dr):\n",
+        "    \"\"\"Funcao que irá mostrar uma função na forma egípcia usando algoritmo guloso.\n",
+        "    Cada fração positiva pode ser representada como soma de frações unitárias únicas. \n",
+        "    Uma fração é fração unitária se o numerador for 1 e o denominador for um número \n",
+        "    inteiro positivo, por exemplo, 1/3 é uma fração unitária. Tal representação é \n",
+        "    chamada de Fração Egípcia, pois era usada pelos antigos egípcios.\n",
         "\n",
-        "# define a function egyptianFraction\n",
-        "# which receive parameter nr as\n",
-        "# numerator and dr as denominator\n",
-        "def egyptianFraction(nr, dr):\n",
+        "    Complexidade: O(n)\n",
         "\n",
-        "\tprint(\"The Egyptian Fraction \" +\n",
-        "\t\t\"Representation of {0}/{1} is\".\n",
-        "\t\t\t\tformat(nr, dr), end=\"\\n\")\n",
-        "\n",
-        "\t# empty list ef to store\n",
-        "\t# denominator\n",
-        "\tef = [] # ----------- 1 \n",
-        "\n",
-        "\t# while loop runs until\n",
-        "\t# fraction becomes 0 i.e,\n",
-        "\t# numerator becomes 0\n",
-        "\twhile nr != 0: # ------- n\n",
-        "\n",
-        "\t\t# taking ceiling\n",
-        "\t\tx = math.ceil(dr / nr) # --- 1 \n",
-        "\n",
-        "\t\t# storing value in ef list\n",
-        "\t\tef.append(x)# ------ 1\n",
-        "\t\n",
-        "\t\t# updating new nr and dr\n",
-        "\t\tnr = x * nr - dr # ---- 1\n",
-        "\t\tdr = dr * x # ------- 1\n",
-        "\n",
-        "\t# printing the values\n",
-        "\tfor i in range(len(ef)): # ------------ n\n",
-        "\t\tif i != len(ef) - 1: # ------ 1\n",
-        "\t\t\tprint(\" 1/{0} +\" .\n",
-        "\t\t\t\t\tformat(ef[i]), end = \" \")\n",
-        "\t\telse:\n",
-        "\t\t\tprint(\" 1/{0}\" .\n",
-        "\t\t\t\t\tformat(ef[i]), end = \" \")\n",
-        "\n",
-        "# calling the function\n",
-        "egyptianFraction(6, 14)\n",
-        "\n",
-        "# This code is contributed\n",
-        "# by Anubhav Raj Singh\n"
+        "    Parameters\n",
+        "    ----------\n",
+        "    nr: numerador da fracao\n",
+        "    dr: denominador da fracao\n",
+        "    \"\"\"\n",
+        " \n",
+        "    print(\"A fracao egipcia de {0}/{1} é \".format(nr, dr))\n",
+        " \n",
+        "    # lista vazia para armazenar os denominadores\n",
+        "    ef = []\n",
+        " \n",
+        "    # laco onde ira rodar ate o numerador for 0\n",
+        "    while nr != 0:\n",
+        " \n",
+        "        # arredondando para cima\n",
+        "        x = math.ceil(dr / nr)\n",
+        " \n",
+        "        # adicionando valor na lista de denominador\n",
+        "        ef.append(x)\n",
+        " \n",
+        "        # atualizando novo nr e dr\n",
+        "\t\t# realizando a operacao de (nr/dr - 1/x)\n",
+        "        nr = x * nr - dr\n",
+        "        dr = dr * x\n",
+        " \n",
+        "    # mostrando os valores\n",
+        "    for i in range(len(ef)):\n",
+        "        if i != len(ef) - 1:\n",
+        "            print(\" 1/{0} +\" .\n",
+        "                    format(ef[i]), end = \" \")\n",
+        "        else:\n",
+        "            print(\" 1/{0}\" .\n",
+        "                    format(ef[i]), end = \"\\n\")\n",
+        " \n",
+        "if __name__ == \"__main__\":\n",
+        "    fracaoEgipcia(6, 14)"
       ]
     },
     {
@@ -563,6 +569,72 @@
         "\n",
         "# This code is contributed by Divyanshu Mehta\n"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Fibonacci - Programação dinâmica"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Conceito**: A programação dinâmica é um método de desenvolvimento que busca\n",
+        "encontrar a solução de vários subproblemas para, daí então, encontrar a\n",
+        "solução do problema geral.\n",
+        "  * A grande novidade dessa metodologia é que os subresultados são\n",
+        "armazenados em memória pois eles são utilizados em diversos momentos\n",
+        "dentro do cômputo da solução. \n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{2: 1, 3: 2, 4: 3}\n",
+            "Fib 3\n"
+          ]
+        }
+      ],
+      "source": [
+        "def fibonacciTopDown(n, table = {}):\n",
+        "    \"\"\"Algoritmo de fibonacci utilizando a técnica de programacao dinamica.Nela, para \n",
+        "    cada operação feita, salva o resultado em uma tabela e antes de realizar um cálculo, \n",
+        "    verifica na tabela se essa operação já foi realizada.\n",
+        "    \n",
+        "    abordagem padrão: O(2^n) ou exponential\n",
+        "    programação dinamica: θ(n)\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    n: sequencia para ser calculado\n",
+        "    table: tabela que armazena as operações\n",
+        "    \"\"\"\n",
+        "    if n == 1 or n == 0:\n",
+        "        return n\n",
+        "    try:\n",
+        "        return table[n]\n",
+        "    except:\n",
+        "        table[n] = fibonacciTopDown(n-1, table) + fibonacciTopDown(n-2, table)\n",
+        "        return table[n]\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    table = {}\n",
+        "    t = fibonacciTopDown(4, table)\n",
+        "    print(table)\n",
+        "    print(f\"Fib {t}\")"
+      ]
     }
   ],
   "metadata": {
@@ -570,7 +642,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -584,11 +656,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.9.7"
     },
     "vscode": {
       "interpreter": {
-        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+        "hash": "bd2f7636f00ba244ee1112d7de7b94c9130bf8c9cdc668463331dff5c9c19aad"
       }
     }
   },
